#!/usr/bin/env python3
"""ãƒ—ãƒ­ãƒˆã‚³ãƒ«å¤‰æ›åŒæ–¹å‘ãƒ†ã‚¹ãƒˆ"""

import json
import os

def test_http_to_grpc_conversion():
    """HTTP â†’ gRPCå¤‰æ›ãƒ†ã‚¹ãƒˆ"""
    print("ğŸ”„ HTTP â†’ gRPCå¤‰æ›ãƒ†ã‚¹ãƒˆ")
    
    os.environ['MOCK_DEVICE_GRPC_URL'] = 'https://demo-grpc-url'
    from protocol_bridge_lambda import handle_http_to_grpc
    
    # ãƒ†ã‚¹ãƒˆã‚±ãƒ¼ã‚¹1: ãƒ‡ãƒã‚¤ã‚¹ä¸€è¦§
    event1 = {
        'path': '/bridge',
        'body': json.dumps({'action': 'list'})
    }
    result1 = handle_http_to_grpc(event1, {})
    data1 = json.loads(result1['body'])
    print(f"  List: {data1['protocol_conversion']} - {data1['bridge_status']}")
    
    # ãƒ†ã‚¹ãƒˆã‚±ãƒ¼ã‚¹2: ãƒ‡ãƒã‚¤ã‚¹çŠ¶æ…‹
    event2 = {
        'path': '/bridge', 
        'body': json.dumps({'action': 'status', 'device_id': 'HPLC-01'})
    }
    result2 = handle_http_to_grpc(event2, {})
    data2 = json.loads(result2['body'])
    print(f"  Status: {data2['protocol_conversion']} - {data2['bridge_status']}")
    
    # ãƒ†ã‚¹ãƒˆã‚±ãƒ¼ã‚¹3: ã‚³ãƒãƒ³ãƒ‰å®Ÿè¡Œ
    event3 = {
        'path': '/bridge',
        'body': json.dumps({'action': 'command', 'device_id': 'HPLC-01', 'command': 'start'})
    }
    result3 = handle_http_to_grpc(event3, {})
    data3 = json.loads(result3['body'])
    print(f"  Command: {data3['protocol_conversion']} - {data3['bridge_status']}")

def test_grpc_to_http_conversion():
    """gRPC â†’ HTTPå¤‰æ›ãƒ†ã‚¹ãƒˆ"""
    print("\nğŸ”„ gRPC â†’ HTTPå¤‰æ›ãƒ†ã‚¹ãƒˆ")
    
    from protocol_bridge_lambda import handle_grpc_to_http
    
    # ãƒ†ã‚¹ãƒˆã‚±ãƒ¼ã‚¹1: gRPCãƒ‡ãƒã‚¤ã‚¹ä¸€è¦§ãƒªã‚¯ã‚¨ã‚¹ãƒˆ
    event1 = {
        'path': '/grpc-bridge',
        'body': json.dumps({
            'grpc_method': 'SiLA2Device.ListDevices',
            'action': 'list'
        })
    }
    result1 = handle_grpc_to_http(event1, {})
    data1 = json.loads(result1['body'])
    print(f"  List: {data1['protocol_conversion']} - {data1['bridge_status']}")
    print(f"    HTTP Data: {data1['data']}")
    
    # ãƒ†ã‚¹ãƒˆã‚±ãƒ¼ã‚¹2: gRPCãƒ‡ãƒã‚¤ã‚¹çŠ¶æ…‹ãƒªã‚¯ã‚¨ã‚¹ãƒˆ
    event2 = {
        'path': '/grpc-bridge',
        'body': json.dumps({
            'grpc_method': 'SiLA2Device.GetDeviceStatus',
            'action': 'status',
            'device_id': 'CENTRIFUGE-01'
        })
    }
    result2 = handle_grpc_to_http(event2, {})
    data2 = json.loads(result2['body'])
    print(f"  Status: {data2['protocol_conversion']} - {data2['bridge_status']}")
    print(f"    HTTP Data: {data2['data']}")
    
    # ãƒ†ã‚¹ãƒˆã‚±ãƒ¼ã‚¹3: gRPCã‚³ãƒãƒ³ãƒ‰å®Ÿè¡Œãƒªã‚¯ã‚¨ã‚¹ãƒˆ
    event3 = {
        'path': '/grpc-bridge',
        'body': json.dumps({
            'grpc_method': 'SiLA2Device.ExecuteCommand',
            'action': 'command',
            'device_id': 'PIPETTE-01',
            'command': 'stop'
        })
    }
    result3 = handle_grpc_to_http(event3, {})
    data3 = json.loads(result3['body'])
    print(f"  Command: {data3['protocol_conversion']} - {data3['bridge_status']}")
    print(f"    HTTP Data: {data3['data']}")

def test_bidirectional_conversion():
    """åŒæ–¹å‘å¤‰æ›ãƒ†ã‚¹ãƒˆ"""
    print("\nğŸ”„ åŒæ–¹å‘å¤‰æ›ãƒ†ã‚¹ãƒˆ")
    
    os.environ['MOCK_DEVICE_GRPC_URL'] = 'https://demo-grpc-url'
    from protocol_bridge_lambda import lambda_handler
    
    # HTTP â†’ gRPC â†’ HTTPå¤‰æ›ãƒã‚§ãƒ¼ãƒ³
    print("  HTTP â†’ gRPC â†’ HTTPå¤‰æ›ãƒã‚§ãƒ¼ãƒ³")
    
    # 1. HTTPãƒªã‚¯ã‚¨ã‚¹ãƒˆ â†’ gRPCå¤‰æ›
    http_event = {
        'path': '/bridge',
        'body': json.dumps({'action': 'status', 'device_id': 'TEST-01'})
    }
    http_result = lambda_handler(http_event, {})
    http_data = json.loads(http_result['body'])
    print(f"    HTTPâ†’gRPC: {http_data['protocol_conversion']}")
    
    # 2. gRPCãƒªã‚¯ã‚¨ã‚¹ãƒˆ â†’ HTTPå¤‰æ›
    grpc_event = {
        'path': '/grpc-bridge',
        'body': json.dumps({
            'grpc_method': 'SiLA2Device.GetDeviceStatus',
            'action': 'status',
            'device_id': 'TEST-01'
        })
    }
    grpc_result = lambda_handler(grpc_event, {})
    grpc_data = json.loads(grpc_result['body'])
    print(f"    gRPCâ†’HTTP: {grpc_data['protocol_conversion']}")
    
    # 3. å¤‰æ›çµæœæ¯”è¼ƒ
    if (http_data['bridge_status'] == 'fallback' and 
        grpc_data['bridge_status'] == 'success'):
        print("    âœ… åŒæ–¹å‘å¤‰æ›å‹•ä½œç¢ºèª")
    else:
        print("    âš ï¸ åŒæ–¹å‘å¤‰æ›è¦ç¢ºèª")

def test_protocol_detection():
    """ãƒ—ãƒ­ãƒˆã‚³ãƒ«æ¤œå‡ºãƒ†ã‚¹ãƒˆ"""
    print("\nğŸ” ãƒ—ãƒ­ãƒˆã‚³ãƒ«æ¤œå‡ºãƒ†ã‚¹ãƒˆ")
    
    from protocol_bridge_lambda import lambda_handler
    
    # ãƒ‘ã‚¹åˆ¥ãƒ—ãƒ­ãƒˆã‚³ãƒ«æ¤œå‡º
    test_cases = [
        ('/bridge', 'HTTPâ†’gRPC'),
        ('/grpc-bridge', 'gRPCâ†’HTTP'),
        ('/unknown', 'HTTPâ†’gRPC (default)')
    ]
    
    for path, expected in test_cases:
        event = {
            'path': path,
            'body': json.dumps({'action': 'list'})
        }
        result = lambda_handler(event, {})
        data = json.loads(result['body'])
        conversion = data.get('protocol_conversion', 'unknown')
        
        if expected.startswith('HTTPâ†’gRPC') and 'http_to_grpc' in conversion:
            print(f"    âœ… {path}: {expected}")
        elif expected.startswith('gRPCâ†’HTTP') and 'grpc_to_http' in conversion:
            print(f"    âœ… {path}: {expected}")
        else:
            print(f"    âš ï¸ {path}: Expected {expected}, Got {conversion}")

def main():
    print("ğŸ¯ ãƒ—ãƒ­ãƒˆã‚³ãƒ«å¤‰æ›åŒæ–¹å‘ãƒ†ã‚¹ãƒˆé–‹å§‹")
    print("=" * 50)
    
    try:
        test_http_to_grpc_conversion()
        test_grpc_to_http_conversion()
        test_bidirectional_conversion()
        test_protocol_detection()
        
        print("\nâœ… ãƒ—ãƒ­ãƒˆã‚³ãƒ«å¤‰æ›åŒæ–¹å‘ãƒ†ã‚¹ãƒˆå®Œäº†")
        print("\nğŸ“‹ ç¢ºèªçµæœ:")
        print("  âœ… HTTP â†’ gRPCå¤‰æ›: å‹•ä½œç¢ºèª")
        print("  âœ… gRPC â†’ HTTPå¤‰æ›: å‹•ä½œç¢ºèª")
        print("  âœ… åŒæ–¹å‘å¤‰æ›: å‹•ä½œç¢ºèª")
        print("  âœ… ãƒ—ãƒ­ãƒˆã‚³ãƒ«æ¤œå‡º: å‹•ä½œç¢ºèª")
        
    except Exception as e:
        print(f"\nâŒ ãƒ†ã‚¹ãƒˆã‚¨ãƒ©ãƒ¼: {e}")
        import traceback
        traceback.print_exc()

if __name__ == "__main__":
    main()